added GA, accessibility updates

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-K9LG4XG');</script>
+  <!-- End Google Tag Manager -->  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +18,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K9LG4XG"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <nav></nav>
 
   <main>
@@ -131,13 +142,13 @@
             <details>
               <summary>How are other characters used?</summary>
               Incorporating a diverse range of characters is one of the best ways to create a captivating fictional
-              book. You’ve probably seen some cliche characters in every literary scenario, from the super-strong hero
+              book. You've probably seen some cliche characters in every literary scenario, from the super-strong hero
               to the devoted timid servant. But does every story have these characters? Is it important to include all
               kinds of characters? What exactly is their role?<br><br>
               <h5>Character Types:</h5>
               <a href="#!" class="dialog" onclick="window.hero.show()">Hero</a>
               <dialog id="hero">
-                When we say the word ‘hero’, it is the classic character that comes to our mind. The lead character is
+                When we say the word "hero", it is the classic character that comes to our mind. The lead character is
                 lauded for their dauntlessness, idealism, ethics, and achievements.
                 <button class="close" onclick="window.hero.close()">x</button>
               </dialog> |
@@ -158,7 +169,7 @@
                 In easy terms, they are the sidekicks of the protagonist. You can consider them as the secondary
                 protagonists as they are seen just as close to the protagonists, and are usually their companions.
                 <br><br>
-                Although they are ‘secondary’, they are just as important as the protagonists.
+                Although they are "secondary", they are just as important as the protagonists.
                 <button class="close" onclick="window.deuteragonist.close()">x</button>
               </dialog>
             </details>
@@ -182,7 +193,7 @@
             <summary>
               Hero
             </summary>
-            When we say the word ‘hero’, it is the classic character that comes to our mind. The lead character is
+            When we say the word "hero", it is the classic character that comes to our mind. The lead character is
             lauded for their dauntlessness, idealism, ethics, and achievements.
           </details>
           <details>
@@ -200,7 +211,7 @@
             In easy terms, they are the sidekicks of the protagonist. You can consider them as the secondary
             protagonists as they are seen just as close to the protagonists, and are usually their companions.
             <br><br>
-            Although they are ‘secondary’, they are just as important as the protagonists.
+            Although they are "secondary", they are just as important as the protagonists.
           </details>
           <details>
             <summary>Foil Character</summary>
