Added social media assets

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Story Prompts</title>
+  <title>Story Prompts | Igniting Your Imagination</title>
+
+  <meta property="og:title" content="Story Prompts">
+  <meta property="og:description" content="Story Prompts seeks to help writers of all ages find a starting point to everything from a short story to a novel.">
+  <meta property="og:image" content="https://storyprompts.org/img/og-storytime-anytime.jpg">
+  <meta property="og:url" content="https://storyprompts.org">
+  <meta name="author" content="Jared Newnam">
+  <meta name="twitter:card" content="https://storyprompts.org/og-storytime-anytime.jpg">
+  <meta property="og:site_name" content="Story Prompts">
+  <meta name="twitter:image:alt" content="Story Prompts"> 
+  <meta property="article:published_time" content="2022-09-01" /> 
+
   <script src="js/app.js" defer></script>
   <link rel="stylesheet" href="css/styles.css">
 </head>
